scss/_navbar.scss
.navbar {
  z-index: $zindex-navbar;
  background-color: #fff;
  box-shadow: $shadow-hover;

  a,
  a:hover,
  a:focus {
    text-decoration: none;
  }

  &.navbar-fixed-top {
    position: fixed;
    z-index: $zindex-navbar-fixed;
    width: 100%;
  }

  ///
  /// Navbar layout
  ///

  > .container,
  > .container-fluid {
    display: flex;
    align-items: center;
    align-content: stretch;
    height: $navbar-height;
  }
  // Compact version
  &.navbar-sm > .container-fluid,
  &.navbar-sm > .container {
    height: $navbar-sm-height;
  }

}


///
/// Brand (application name)
///

.navbar-brand {
  width: $navbar-brand-width;
  font-size: $navbar-brand-font-size;
  font-weight: $font-light;
  // text-align: center;

  &,
  &:hover,
  &:visited,
  &:active {
    color: #fff;
  }

  &-logo {
    position: relative;
    top: $navbar-brand-logo-size - $navbar-brand-font-size;
    width: $navbar-brand-logo-size;
  }
}

///
/// Links (nav menu)
///

.navbar-links {
  @include list-unstyled;

  flex-grow: 1;
  display: flex;
  margin-bottom: 0;
}

.navbar-item {
  > a {
    font-size: $navbar-link-font-size;
    padding: $btn-padding-y $btn-padding-x;
  }

  .navbar &.active > a {
    color: $teal;
  }
}


///
/// Action links
///

.navbar-actions {
  @include list-unstyled;

  display: flex;
  margin-right: $grid-gutter-width;
  margin-bottom: 0;

  &-item {
    @extend .navbar-item;

    > a {
      position: relative;
      padding-right: $btn-padding-x;
      padding-left: $btn-padding-x;

      .badge {
        $icon-badge-size: 1.2rem;
        position: absolute;
        display: block;
        top: (-$icon-badge-size / 4);
        right: $btn-padding-x / 2;
        width: $icon-badge-size;
        height: $icon-badge-size;
        padding-top: .34rem;
        font-size: .75rem;
        line-height: 1;
        font-weight: $font-semi-bold;
        text-align: center;
        border-radius: 50%;

        @each $state, $props in $alert-states {
          $bg: map-get($props, bg);
          $color: map-get($props, color);
          &.badge-#{ $state } {
            color: $color;
            background-color: $bg;
          }
        }
      }
    }
  }
}

///
/// User profile
///

.navbar-profile {
  text-align: right;

  .profile-username,
  .profile-credential {
    display: block;
    line-height: 1.2;
  }

  .profile-username {
    font-size: $navbar-link-font-size;
  }

  .profile-credential {
    font-size: $navbar-link-font-size * .85;
  }
}


///
/// Environment
///
.navbar-environment {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: percentage(2/12);
  margin-right: (-$grid-gutter-width / 2);
  margin-left: $grid-gutter-width / 2;
  color: #fff;
  background-color: $blue-darker;
}


// Utility for shifting content down when using navbar-fixed-top
.margin-top-navbar {
  margin-top: $navbar-height;

  &-sm {
    margin-top: $navbar-sm-height;
  }
}

@each $variant, $props in $navbar-variants {
  .navbar-#{ $variant } {
    background-color: map-get($props, bg);

    .navbar-brand,
    .navbar-item > a {
      &,
      &:hover,
      &:focus,
      &:active,
      &:visited {
        color: map-get($props, color);
      }
    }
    .navbar-item.active > a {
      color: map-get($props, color-active);
    }

    // Dropdown lists
    @if map-get($props, dark) {
      .navbar-item > .dropdown-toggle:focus {
        color: $teal;
      }
    }


    // User profile section
    .profile-username,
    .profile-credential {
      color: map-get($props, color);
    }

    .profile-username {
      font-size: $navbar-link-font-size;
    }

    .profile-credential {
      font-size: $navbar-link-font-size * .85;
    }
  }
}

///
/// Command bar
///

.command-bar {
  position: relative;
  z-index: $zindex-navbar;
  padding-top: $command-bar-padding-y;
  padding-bottom: $command-bar-padding-y;
  background-color: $command-bar-bg;
  box-shadow: $shadow-hover;

  &-actions {
    list-style-type: none;
    padding-left: 0;
    margin-bottom: 0;

    > li {
      display: inline-block;
    }
  }

  &-icon {
    font-size: $font-size-lg;
    vertical-align: text-bottom;
    padding-right: .5rem;
  }

  &.command-bar-fixed-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: $zindex-navbar-fixed;
  }
}

///
/// Vertical navbar
///
.navbar-vertical {
  position: fixed;
  overflow-x: hidden;
  overflow-y: auto;
  top: 0;
  bottom: 0;
  left: 0;
  height: auto;
  width: $navbar-vertical-width;
  background-color: $navbar-vertical-bg;

  &.navbar-vertical-jumbo {
    width: $navbar-vertical-jumbo-width;
  }

  &-link {
    display: block;
    padding-right: $navbar-vertical-padding-x;
    padding-left: $navbar-vertical-padding-x;
    font-size: $font-size-sm;
    transition: all $transition-fast;

    &,
    &:active,
    &:visited {
      color: $navbar-vertical-link-color;
    }

    &:hover {
      background-color: $navbar-vertical-hover-bg;
    }

    &.active {
      color: $navbar-vertical-active-color;
      background-color: $navbar-vertical-active-bg;
    }

    .icon,
    &-title {
      display: block;
    }

    .icon,
    .icon + &-title {
      text-align: center;
    }

    .icon + &-title {
      padding-top: 0;
      padding-bottom: $navbar-vertical-padding-y;
    }

    .icon {
      display: block;
      padding-top: $navbar-vertical-padding-y;
      font-size: $navbar-vertical-icon-size;
    }

    &-title {
      padding-top: $navbar-vertical-padding-y / 2;
      padding-bottom: $navbar-vertical-padding-y / 2;
    }
  }
}

.margin-left-navbar-vertical {
  margin-left: $navbar-vertical-width;
}

